# cppshares

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt
.github/workflows/: ci.yml  gate.yml
docs/: build-configuration.md
include/cppshares/api/: server.hpp
include/cppshares/backtest/: engine.hpp
include/cppshares/core/: engine.hpp
include/cppshares/data/: data_strategy.hpp  data_types.hpp  database.hpp  market_data.hpp
include/cppshares/data/providers/: eastmoney_fields.hpp  eastmoney_provider.hpp  netease_provider.hpp  sina_provider.hpp  tencent_provider.hpp
include/cppshares/strategy/: base_strategy.hpp
include/cppshares/utils/: binary_log_reader.hpp  config.hpp  logger.hpp  math.hpp
src/: main.cpp
src/api/: CMakeLists.txt  server.cpp
src/backtest/: CMakeLists.txt  engine.cpp
src/core/: CMakeLists.txt  engine.cpp
src/data/: CMakeLists.txt  data_strategy.cpp  data_types.cpp  database.cpp
src/data/providers/: eastmoney_provider.cpp  netease_provider.cpp  sina_provider.cpp  tencent_provider.cpp
src/strategy/: CMakeLists.txt  base_strategy.cpp
src/utils/: CMakeLists.txt  binary_log_reader.cpp  config.cpp  logger.cpp
tests/: CMakeLists.txt
tests/core/: test_engine.cpp
tests/data/: test_data_strategy.cpp  test_data_types.cpp  test_providers.cpp
tests/data/providers/: test_eastmoney_fields.cpp
